<resources>
    <string name="app_name">androidApp</string>
    <string name="main_frag_generate_btn">Generate</string>
    <string name="main_frag_list_btn">List</string>
    <string name="main_frag_sensor_btn">Generate Sensors</string>
    <string name="main_frag_exit_btn">Exit</string>

    <string name="sensor_frag_title">Accident sensor</string>
    <string name="sensor_frag_location">Location</string>
    <string name="sensor_frag_update">Update frequency format(DD:HH:MM)</string>
    <string name="sensor_frag_acceleration">Acceleration</string>
    <string name="sensor_number_input">Number of sensors</string>
    <string name="sensor_number_hint">5</string>

    <string name="menu_accident">Accident</string>
    <string name="menu_police_car">Police car</string>

    <string name="btn_back">Back</string>
    <string name="btn_save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_analyze">Analyze</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_back_camera">Back</string>
    <string name="main_frag_camera_btn">Camera</string>
    <string name="tv_sos_vehicles">SOS-VEHICLES</string>
    <string name="tv_acccidents">ACCIDENTS</string>
    <string name="message_hint">Message</string>
    <string name="btn_send">Send</string>

    <string name="loading_text">Analyzing image</string>
    <string name="traffic_status_text">Traffic status: %1$s</string>
    <string name="num_of_cars_text">Number of cars: %1$d</string>

    <string name="message_text">Write a message</string>
    <string name="start_long">Starting longitude</string>
    <string name="start_lat">Starting latitude</string>
    <string name="end_lat">Ending latitude</string>
    <string name="end_long">Ending longitude</string>
    <string name="end_loc">Ending location</string>
    <string name="start_loc">Start location</string>
</resources>